# timemory-cupti

./: CMakeLists.txt  cupti_perfworks.cpp  cupti_perfworks.hpp  main.cu
